--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 				<version>2.3</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.0</version>
+				<optional>true</optional>
+			</dependency>
+
 
 			<dependency>
 				<groupId>junit</groupId>
