--- a/xremoting-core/pom.xml
+++ b/xremoting-core/pom.xml
@@ -20,6 +20,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
