--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -48,7 +48,12 @@
 				<version>3.0</version>
 				<optional>true</optional>
 			</dependency>
-
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring</artifactId>
+				<version>2.0</version>
+				<optional>true</optional>
+			</dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
