--- a/xremoting-core/pom.xml
+++ b/xremoting-core/pom.xml
@@ -24,6 +24,10 @@
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
