--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.xremoting</groupId>
 	<artifactId>xremoting-parent</artifactId>
-	<version>1.0-1-SNAPSHOT</version>
+	<version>1.0-1</version>
 	<packaging>pom</packaging>
 	<name>Simple remoting framework</name>
 
 	<modules>
 		<module>xremoting-core</module>
 	</modules>
+	
+	<scm>
+		<connection>scm:svn:https://xremoting.googlecode.com/svn/tags/xremoting-parent-1.0-1</connection>
+		<developerConnection>scm:svn:https://xremoting.googlecode.com/svn/tags/xremoting-parent-1.0-1</developerConnection>
+		<url>http://xremoting.googlecode.com/tags/xremoting-parent-1.0-1</url>
+	</scm>
+	
+	<!--
+    -      Distributions
+    -->
+	<distributionManagement>
+		<repository>
+			<id>xremoting-release</id>
+			<name>Local Maven repository of releases</name>
+		    <!-- 
+		        Use https://xremoting.googlecode.com/svn/maven2/release to include xremoting repository
+		    -->
+            <url>file:///${HOME}/svn/xremoting-maven2-release</url>
+		</repository>
+		<snapshotRepository>
+			<id>xremoting-snapshot</id>
+			<name>Local Maven repository of snapshots</name>
+			<url>file:///${HOME}/svn/xremoting-maven2-snapshot</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>		
+	</distributionManagement>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -69,6 +87,14 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
