[maven-release-plugin] prepare release xremoting-parent-1.0-4

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.xremoting</groupId>
 	<artifactId>xremoting-parent</artifactId>
-	<version>1.0-4-SNAPSHOT</version>
+	<version>1.0-4</version>
 	<packaging>pom</packaging>
 	<name>Simple remoting framework</name>
 	<description>Simple yet extensible remoting framework</description>
@@ -20,9 +20,9 @@
 	<url>http://code.google.com/p/xremoting/</url>
 	
 	<scm>
-		<connection>scm:svn:https://xremoting.googlecode.com/svn/trunk/</connection>
-		<developerConnection>scm:svn:https://xremoting.googlecode.com/svn/trunk/</developerConnection>
-		<url>http://xremoting.googlecode.com/</url>
+		<connection>scm:svn:https://xremoting.googlecode.com/svn/tags/xremoting-parent-1.0-4</connection>
+		<developerConnection>scm:svn:https://xremoting.googlecode.com/svn/tags/xremoting-parent-1.0-4</developerConnection>
+		<url>http://xremoting.googlecode.com/tags/xremoting-parent-1.0-4</url>
 	</scm>
 	
 	<licenses>
