--- a/xremoting-core/pom.xml
+++ b/xremoting-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>xremoting-parent</artifactId>
         <groupId>com.googlecode.xremoting</groupId>
-        <version>1.0-10</version>
+        <version>1.0-11-SNAPSHOT</version>
     </parent>
     <artifactId>xremoting-core</artifactId>
     <name>Simple remoting framework core</name>
